Chapter 5 exercises completed

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 {% load staticfiles %}
+
 <html>
 
     <head>
@@ -11,14 +12,12 @@
         <h1>Rango says...</h1>
         <div>
             here is the about page. <br />
-            <strong>{{ boldmessage}}</strong><br />
+            This tutorial has been put together by Amogha Shetty.<br />
         </div>
         <div>
             <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/rango.jpg' %}"
-                 alt="Picture of Rango" />
-            <img src="{{ MEDIA_URL }}cat.jpg" 
-                 alt="Picture of a Cat" />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
+            <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
         </div>
     </body>
 
